application.conf: No activar el "virtualMatchEventActor"

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,6 +86,7 @@ logger.application=DEBUG
 
 # mongodb://[username:password@]host1[:port1][,hostN[:portN]]/dbName
 mongodb.uri="mongodb://127.0.0.1:27017/dailySoccerDB"
+# mongodb.uri="mongodb://127.0.0.1:27017/production-live"
 
 # De momento ponemos max-age a 0 para que interrogue al servidor cada vez que se pulse Refresh o Enter
 # Recordar que: Si max-age!= 0, "refresh" siempre manda requests de nuevo al servidor, pero "enter" no.
@@ -141,12 +142,12 @@ contestsActor {
 }
 
 virtualSetupActor {
-  autoStart = true
+  autoStart = false
   tickInterval = 1 minute
 }
 
 virtualMatchEventActor {
-  autoStart = true
+  autoStart = false
   tickInterval = 9 seconds
   timeMultiplier = 10
 }
