Model: initMongo: MongoClientOptions

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -99,6 +99,13 @@ akka {
   # log-config-on-start = on
 }
 
+mongoOptions {
+  connectionsPerHost  : 150
+  threadsAllowedToBlockForConnectionMultiplier : 150
+  connectTimeout      : 30000
+  socketTimeout       : 60000
+}
+
 play {
   akka {
     akka.loggers = ["akka.event.slf4j.Slf4jLogger"]
