--- a/conf/production.conf
+++ b/conf/production.conf
@@ -13,6 +13,11 @@ heroku_app=${HEROKU_APP_NAME}
 
 rabbitmq=${CLOUDAMQP_URL}
 
+mongoOptions.connectionsPerHost  = ${MONGO_CONNECTIONS_PER_HOST}
+mongoOptions.threadsAllowedToBlockForConnectionMultiplier = ${MONGO_CONNECTIONS_MULTIPLIER}
+mongoOptions.connectTimeout      = ${MONGO_CONNECT_TIMEOUT}
+mongoOptions.socketTimeout       = ${MONGO_SOCKET_TIMEOUT}
+
 play.akka.actor.default-dispatcher.fork-join-executor.parallelism-factor = ${AKKA_DEFAULT_PARALLELISM_FACTOR}
 play.akka.actor.default-dispatcher.fork-join-executor.parallelism-min = ${AKKA_DEFAULT_PARALLELISM_MIN}
 play.akka.actor.default-dispatcher.fork-join-executor.parallelism-max = ${AKKA_DEFAULT_PARALLELISM_MAX}
