Model: MongoClientOptions: socketKeepAlive

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -104,6 +104,7 @@ mongoOptions {
   threadsAllowedToBlockForConnectionMultiplier : 150
   connectTimeout      : 30000
   socketTimeout       : 60000
+  socketKeepAlive     : true
 }
 
 play {
