--- a/conf/production.conf
+++ b/conf/production.conf
@@ -17,6 +17,7 @@ mongoOptions.connectionsPerHost  = ${MONGO_CONNECTIONS_PER_HOST}
 mongoOptions.threadsAllowedToBlockForConnectionMultiplier = ${MONGO_CONNECTIONS_MULTIPLIER}
 mongoOptions.connectTimeout      = ${MONGO_CONNECT_TIMEOUT}
 mongoOptions.socketTimeout       = ${MONGO_SOCKET_TIMEOUT}
+mongoOptions.socketKeepAlive     = ${MONGO_SOCKET_KEEPALIVE}
 
 play.akka.actor.default-dispatcher.fork-join-executor.parallelism-factor = ${AKKA_DEFAULT_PARALLELISM_FACTOR}
 play.akka.actor.default-dispatcher.fork-join-executor.parallelism-min = ${AKKA_DEFAULT_PARALLELISM_MIN}
