--- a/conf/application.conf
+++ b/conf/application.conf
@@ -123,6 +123,42 @@ play {
   }
 }
 
+default-dispatcher {
+  # Dispatcher is the name of the event-based dispatcher
+  type = Dispatcher
+  # What kind of ExecutionService to use
+  executor = "default-executor"
+  # Configuration for the fork join pool
+  default-executor {
+    # Min number of threads to cap factor-based parallelism number to
+    parallelism-min = 300
+    # Max number of threads to cap factor-based parallelism number to
+    parallelism-max = 300
+  }
+  # Throughput defines the maximum number of messages to be
+  # processed per actor before the thread jumps to the next actor.
+  # Set to 1 for as fair as possible.
+  throughput = 100
+}
+
+cache-dispatcher {
+  # Dispatcher is the name of the event-based dispatcher
+  type = Dispatcher
+  # What kind of ExecutionService to use
+  executor = "fork-join-executor"
+  # Configuration for the fork join pool
+  fork-join-executor {
+    # Min number of threads to cap factor-based parallelism number to
+    parallelism-min = 300
+    # Max number of threads to cap factor-based parallelism number to
+    parallelism-max = 300
+  }
+  # Throughput defines the maximum number of messages to be
+  # processed per actor before the thread jumps to the next actor.
+  # Set to 1 for as fair as possible.
+  throughput = 100
+}
+
 botSystemActor {
   targetUrl = "http://127.0.0.1:9000"    // # La url a la que atacaran nuestros bots para hacer su cosa de bots
   numBots = 30                           // Hasta 100
